[package]
name = "hasan_react_auto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.1.3"
glob = "0.3.1"
leptess = "0.14.0"
mp4 = "0.14.0"
mp4-merge = "0.1.7"
raster = "0.2.0"
reqwest = { version = "0.11.25", features = ["blocking"] }
screenshots = "0.8.10"
serde = "1.0.197"
serde_json = "1.0.114"
